src/styles/style.scss
/* ... */
main {
    display: flex;
    flex: 1;
    margin-top: 60px;
}

.navbar {
    width: 70px;
    background: $sidebar-bg;
    display: flex;
    justify-content: center;
    padding: 14px;
    margin: -14px -2px 0 -2px;

    .navbar-list {
        position: fixed;
        @include set-flex(column, 0px);
        list-style: none;

        .navbar-list__items {
            @include set-flex(column, 0px);
        }
    }
}

.navbar-list__link {
    text-decoration: none;
    color: $navbar-color;
    font-size: 10px;
    font-weight: 500;
    padding: 2px 10px;
    width: 100%;
    text-align: center;
    transition: background-color 0.3s ease;

    &:hover {
        background-color: darken($sidebar-bg, 10%);
        color: $red;
    }

    .navbar-list__icons {
        color: $navbar-color;

        &:hover {
            color: $red;
        }
    }

    .navbar-list__icons--active {
        color: $red;
    }
}


// .sidebar {
//     @include set-flex(column, 0);
//     width: 350px;

//     .sidebar-header {
//         height: 50px;
//         background: #7c9969;
//     }

//     .sidebar-content {
//         flex: 1;
//         background: #5d638e;
//     }
// }

.main-content {
    flex: 1;
    background: #FFFFFF;
}

.course-modal {
    position: relative;
    display: none; //by default modal won't be visible ,it'll be visible only when you click on particular training
}

.course-title-metrics {
    padding: 20px;
    display: flex;
    justify-content: space-between;
    margin: 5px;

    .course-metrics {
        display: flex;
        justify-content: space-between;

        .metric-one,
        .metric-two,
        .metric-three,
        .metric-four {
            margin-right: 20px;
        }
    }

    .metric-value {
        color: $red;
        text-align: center;
    }

    .metric-description {
        font-size: 11px;
        text-align: center;
    }
}

.course-modal-details {
    display: flex;
    justify-content: space-between;

    .course-details {
        width: 70%;
    }

    .employee-details {
        width: 30%;
        margin: 30px;
    }
}

.type-mode {
    padding-left: 20px;

    .btn-type {
        padding: 3px 10px;
        font-weight: 600;
        border: none;
        border-radius: 5px;
    }

    .btn-mode {
        border-radius: 5px;
        background-color: #FFFFFF;
        border: 1px solid $red;
        padding: 3px 10px;
        color: $red;
        font-weight: 600;
    }
}

.target-audience {
    padding-left: 40px;

    .course-audience {
        font-weight: 400;
        font-size: 15px;

        .course-audience-span {
            font-weight: 500;
            font-size: 20px;
        }
    }
}

.course-date-duration {
    padding-left: 40px;

    .date-duration {
        font-weight: 400;
        font-size: 15px;

        .date-duration-span {
            font-weight: 500;
            font-size: 20px;
        }
    }
}

.trainer {
    padding-left: 40px;

    .trainer-title {
        font-weight: 400;
        font-size: 15px;

        .trainer-name {
            font-weight: 500;
            font-size: 20px;
        }
    }
}

.course-status {
    padding-left: 40px;

    .status-title {
        font-weight: 400;
        font-size: 15px;

        .course-status-label {
            font-weight: 500;
            font-size: 20px;
        }
    }
}

.course-topics {
    display: flex;
    padding: 40px;

    .topic-title {
        font-weight: 400;
        font-size: 15px;
    }

    .topics-list {
        padding-left: 40px;
    }
}

.employee-header {
    display: flex;
    justify-content: space-between;
    margin-bottom: 10px;

    h2 {
        font-weight: 600;
        font-size: 20px;
        padding: 10px;
    }

    .employee-status {
        padding: 10px;

        .dropdown {
            position: relative;
            display: inline-block;
            cursor: pointer;

            .dropdown-btn {
                background-color: white;
                border: 1px solid #ccc;
                padding: 10px;
                width: 150px;
                text-align: left;
                cursor: pointer;
            }

            .dropdown-menu {
                display: none;
                position: absolute;
                top: 100%;
                left: 0;
                background-color: white;
                border: 1px solid #ccc;
                width: 150px;
                list-style: none;
                padding: 0;
                margin: 0;
                z-index: 1000;

                .dropdown-menu li {
                    padding: 10px;
                    cursor: pointer;
                }

                .dropdown.active .dropdown-menu {
                    display: block;
                }
            }
        }
    }
}

.employee-card {
    display: flex;
    gap: 20px;
    align-items: center;
    border-radius: 10px;
    box-shadow: 0px 0px 5px rgb(203, 203, 203);
    margin: 10px;
    height: 10vh;

    .employee-info {
        width: 180px;

        .employee-name {
            font-weight: 600;
            font-size: 15px;
        }

        .employee-attendance {
            font-size: 10px;
            font-weight: 600;
        }
    }

    .employee-department {
        padding: 10px;

        .department-label {
            font-weight: 600;
            font-size: 8px;
            color: gray;
        }

        .department-name {
            font-size: 13px;
        }
    }
}

.course-status-label[data-status="in-progress"] {
    color: $red;
}

.course-status-label[data-status="completed"] {
    color: rgb(13, 109, 13);
}

.course-status-label[data-status="scheduled"] {
    color: greenyellow;
}

.btn-type[data-type="softskills"] {
    background-color: palevioletred;
}

.btn-type[data-type="technical"] {
    background-color: rgb(0, 123, 255);
}

.btn-type[data-type="language"] {
    background-color: rgb(177, 243, 255);
}
/* ... */

